@@ -22,7 +22,7 @@ protected:
 
 private:
 	HMODULE m_hRichEdit;
-
+	CFont m_Font;
 };
 
 // Declaration of the CContainText class
