@@ -32,16 +32,66 @@ BOOL CViewText::OnCommand(WPARAM wParam, LPARAM lParam)
 	switch (LOWORD(wParam))
 	{
 	case IDM_EDIT_COPY:
-		SendMessage(WM_COPY, 0, 0);
-		TRUE;	// return TRUE for handled commands
+		OnEditCopy();
+		return TRUE;
+	case IDM_EDIT_PASTE:
+		OnEditPaste();
+		return TRUE;
+	case IDM_EDIT_CUT:
+		OnEditCut();
+		return TRUE;
+	case IDM_EDIT_DELETE:
+		OnEditDelete();
+		return TRUE;
+	case IDM_EDIT_REDO:
+		OnEditRedo();
+		return TRUE;
+	case IDM_EDIT_UNDO:
+		OnEditUndo();
+		return TRUE;
 	}
 
 	// return FALSE for unhandled commands
 	return FALSE;
 }
 
+void CViewText::OnEditCopy()
+{
+	SendMessage(WM_COPY, 0, 0);
+}
+
+void CViewText::OnEditPaste()
+{
+	SendMessage(EM_PASTESPECIAL, CF_TEXT, 0);
+}
+
+void CViewText::OnEditCut()
+{
+	SendMessage(WM_CUT, 0, 0);
+}
+
+void CViewText::OnEditDelete()
+{
+	SendMessage(WM_CLEAR, 0, 0);
+}
+
+void CViewText::OnEditRedo()
+{
+	SendMessage(EM_REDO, 0, 0);
+}
+
+void CViewText::OnEditUndo()
+{
+	SendMessage(EM_UNDO, 0, 0);
+}
+
 void CViewText::OnInitialUpdate()
 {
+	m_Font.CreateFont(16, 0, 0, 0, FW_NORMAL, 0, 0, 0, ANSI_CHARSET, OUT_DEFAULT_PRECIS,
+		            CLIP_DEFAULT_PRECIS, DEFAULT_QUALITY, FF_MODERN, _T("Courier New"));
+
+	SendMessage(WM_SETFONT, (WPARAM)(HFONT)m_Font, 0);
+	
 	SetWindowText(_T("Text Edit Window\r\n\r\n You can type some text here ..."));
 }
 
